PUBSTWO-1735/1736 - Springdoc start